--- a/app/views/powder_notifier_mailer/powder_alert.text.erb
+++ b/app/views/powder_notifier_mailer/powder_alert.text.erb
@@ -1,14 +1,18 @@
 <%= @user.email %> 様
 
 Powder Hunterからの最新のパウダー情報です！
-昨日までパウダー予報がなかったスキー場で、新たにパウダーチャンスが到来しました。
+昨日までパウダー予報がなかったお気に入りスキー場で、新たにパウダーチャンスが到来しました。
 
-【スキー場】 <%= @resort.name_ja.presence || @resort.name_en %>
-【パウダー到来日】 <%= @powder_date %>
-【パウダー指数】 <%= @index_val %> / 100
-
-詳細は Powder Hunter をご確認ください！
-http://localhost:3000/resorts/<%= @resort.id %>
+<% @matching_resorts_data.each do |data| %>
+<% resort = data[:resort] %>
+<% resort_name = resort.name_ja.presence || resort.name_en %>
+--------------------------------------------------
+【スキー場】 <%= resort_name %>
+【パウダー到来日】 <%= data[:date] %>
+【パウダー指数】 <%= data[:index] %> / 100
+詳細: http://localhost:3000/resorts/<%= resort.id %>
+<% end %>
+--------------------------------------------------
 
 --
 Powder Hunter
