--- a/app/views/resorts/show.html.erb
+++ b/app/views/resorts/show.html.erb
@@ -80,7 +80,7 @@
   </header>
 
   <div class="container">
-    <%= link_to "← 戻る (Back to Top)", root_path, class: "back-link" %>
+    <%= link_to "← 戻る (Back to Resorts)", resorts_path, class: "back-link" %>
     
     <h2>14-Day Powder Forecast</h2>
 
