--- a/app/views/powder_notifier_mailer/powder_alert.text.erb
+++ b/app/views/powder_notifier_mailer/powder_alert.text.erb
@@ -1,13 +1,20 @@
 <%= @user.email %> 様
 
 Powder Hunterからの最新のパウダー情報です！
-昨日までパウダー予報がなかったお気に入りスキー場で、新たにパウダーチャンスが到来しました。
 
 <% @matching_resorts_data.each do |data| %>
 <% resort = data[:resort] %>
 <% resort_name = resort.name_ja.presence || resort.name_en %>
 --------------------------------------------------
 【スキー場】 <%= resort_name %>
+<% case data[:reason] %>
+<% when :new %>
+🆕 新たにパウダーチャンスが到来しました！
+<% when :earlier %>
+⏩ パウダーチャンス日が早まりました！（前回: <%= data[:last_date_str] %> → 今回: <%= data[:date] %>）
+<% when :later %>
+⏪ パウダーチャンス日が遅れそうです（前回: <%= data[:last_date_str] %> → 今回: <%= data[:date] %>）
+<% end %>
 【パウダー到来日】 <%= data[:date] %>
 【パウダー指数】 <%= data[:index] %> / 100
 詳細: <%= resort_url(resort) %>
